--- a/style/sportStyle.css
+++ b/style/sportStyle.css
@@ -26,7 +26,7 @@
 
 		.blobSport {
 			width: 40%;
-			margin-top: -30%;
+			margin-top: 0%;
 			margin-left: 70%;
 		}
 
@@ -85,13 +85,18 @@
 			
 			
 		}
+
+		.sportUl {
+			padding-top: 10rem;
+		}
         
 
 		
 		.sides div {
 			
 			/*border: 4px solid #3498Db;*/
-			width: 6em;
+			
+			/*width: 6em;*/
 			margin-bottom: 1em;
             border-radius: 0.5em;
 			margin: 1em;
